--- a/assigment1_ver2.0.ipynb
+++ b/assigment1_ver2.0.ipynb
@@ -1814,7 +1814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f208dfb",
+   "id": "ff0924d3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-26T02:48:12.301381Z",
@@ -2303,7 +2303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "698b101b",
+   "id": "a2f130c8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-26T02:48:45.405382Z",
@@ -2357,7 +2357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8511505c",
+   "id": "7ad44205",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-26T03:05:02.778581Z",
@@ -2380,10 +2380,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69c1e088",
+   "id": "30891743",
    "metadata": {},
    "source": [
-    "### In estimated A_LR, many pixel values are now equal to zero and the retrieved Spatial Map obtained from Lasso Regression are much clearer and the noise data we once added to the X has been filtered out."
+    "### In estimated A_LR, many pixel values are now equal to zero and the retrieved Spatial Map obtained from Lasso Regression are much clearer as the noise data we once added to the X has been filtered out to zero."
    ]
   },
   {
@@ -2397,7 +2397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29b3a15b",
+   "id": "a81342f6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-26T03:03:04.175942Z",
@@ -2445,7 +2445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "153ac6c8",
+   "id": "19b872e6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-26T03:03:04.253946Z",
@@ -2460,7 +2460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edcdbb92",
+   "id": "2a574f3d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-26T03:03:04.492948Z",
@@ -2479,7 +2479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b4fa142",
+   "id": "142e741b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-26T03:03:06.472947Z",
@@ -2504,7 +2504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f58e45c",
+   "id": "7abf404a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-26T03:14:41.950476Z",
@@ -2522,7 +2522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115e129a",
+   "id": "c353881c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-26T03:14:48.406477Z",
@@ -2538,7 +2538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e1eb9ac",
+   "id": "87e946f8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-26T03:15:01.680001Z",
@@ -2562,7 +2562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fab0c173",
+   "id": "881860d0",
    "metadata": {},
    "outputs": [],
    "source": []
